--- a/css/style.css
+++ b/css/style.css
@@ -1454,6 +1454,364 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.tarteb {
+  padding: 40px 0;
+  padding-bottom: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tarteb .tarteb-col.first {
+  text-align: center;
+}
+
+.tarteb .tarteb-col.first img.profile {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  border: 5px solid #FFB347;
+  margin-bottom: 20px;
+}
+
+.tarteb .tarteb-col.first h4 {
+  font-size: 18px;
+  color: #777;
+}
+
+.tarteb .tarteb-col.first .tarteb-degree {
+  background: #924ECC;
+  margin-top: 20px;
+  padding: 20px;
+  color: #fff;
+  height: 190px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 0 15px 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180px;
+}
+
+.tarteb .tarteb-col.first .tarteb-degree h5 {
+  font-size: 70px;
+  font-weight: 700;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+.tarteb .tarteb-col.first .tarteb-degree p {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.tarteb .tarteb-col.second {
+  text-align: center;
+}
+
+.tarteb .tarteb-col.second img.profile {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  border: 5px solid #6829B3;
+  margin-bottom: 20px;
+}
+
+.tarteb .tarteb-col.second h4 {
+  font-size: 18px;
+}
+
+.tarteb .tarteb-col.second .tarteb-degree {
+  background: #FFB347;
+  margin-top: 20px;
+  padding: 20px;
+  color: #fff;
+  height: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 15px 15px 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 200px;
+}
+
+.tarteb .tarteb-col.second .tarteb-degree h5 {
+  font-size: 80px;
+  font-weight: 700;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+.tarteb .tarteb-col.second .tarteb-degree p {
+  font-size: 40px;
+  font-weight: 700;
+  color: #6829B3;
+}
+
+.tarteb .tarteb-col.third {
+  text-align: center;
+}
+
+.tarteb .tarteb-col.third img.profile {
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  border: 5px solid #FFB347;
+  margin-bottom: 20px;
+}
+
+.tarteb .tarteb-col.third h4 {
+  font-size: 18px;
+  color: #777;
+}
+
+.tarteb .tarteb-col.third .tarteb-degree {
+  background: #6729B3;
+  margin-top: 20px;
+  padding: 20px;
+  color: #fff;
+  height: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 15px 0 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180px;
+}
+
+.tarteb .tarteb-col.third .tarteb-degree h5 {
+  font-size: 70px;
+  font-weight: 700;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+
+.tarteb .tarteb-col.third .tarteb-degree p {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.tarteb-box {
+  background: #F7F6FD;
+  padding: 40px;
+  border-radius: 20px;
+}
+
+.tarteb-box .tarteb-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 20px;
+  background: #fff;
+  border: 2px solid #ccc;
+  gap: 20px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.tarteb-box .tarteb-list h4 {
+  font-size: 28px;
+  font-weight: 700;
+  color: #6829B3;
+  margin: 0;
+}
+
+.tarteb-box .tarteb-list img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
+.tarteb-box .tarteb-list h3 {
+  margin: 0;
+  color: #000;
+  font-size: 22px;
+}
+
+.tarteb-box .tarteb-list h2 {
+  margin: 0;
+  color: #FFB347;
+  font-weight: 700;
+  font-size: 36px;
+}
+
+.rate .rate-content {
+  padding: 10px 40px 40px 40px;
+  margin-top: 160px;
+  border-radius: 20px;
+  background: #F7F6FD;
+  margin-bottom: 40px;
+}
+
+.rate h2 {
+  width: 250px;
+  height: 250px;
+  border: 14px solid #6829B3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #8c45e0;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 70px;
+  font-weight: 700;
+  margin-top: -125px;
+}
+
+.rate h3 {
+  color: #FFB347;
+  font-size: 28px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.rate .rate-box {
+  padding: 20px;
+  border: 2px solid #ccc;
+  background: #fff;
+  border-radius: 20px;
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
+.rate .rate-box .numbers-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.rate .rate-box .numbers-box h4 {
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.rate .rate-box .numbers-box h4.main {
+  color: #6829B3;
+}
+
+.rate .rate-box .numbers-box h4.sec {
+  color: #FFB347;
+}
+
+.rate .rate-box .numbers-box h4.green {
+  color: #3ACB10;
+}
+
+.rate .rate-box .numbers-box h4.red {
+  color: #f00;
+}
+
+.rate .rate-box .numbers-box span {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #FFB347;
+}
+
+.rate h4.title {
+  font-size: 32px;
+  color: #FFB347;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.rate .mwad {
+  padding: 10px 0 40px 0;
+}
+
+.rate .mwad .mwad-box {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.rate .mwad .mwad-box h4 {
+  width: 110px;
+  height: 110px;
+  line-height: 100px;
+  text-align: center;
+  border: 5px solid #6829B3;
+  margin-left: auto;
+  margin-right: auto;
+  background: #8c45e0;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.rate .mwad .mwad-box p {
+  margin-top: 10px;
+  font-size: 18px;
+}
+
 /* Responsive */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -1704,6 +2062,79 @@ input[type=number] {
   .whats-btn img {
     width: 40px;
     height: 40px;
+  }
+  .tarteb .tarteb-col.first .tarteb-degree {
+    width: 110px;
+    padding: 10px;
+  }
+  .tarteb .tarteb-col.second .tarteb-degree {
+    width: 120px;
+    padding: 10px;
+  }
+  .tarteb .tarteb-col.third .tarteb-degree {
+    width: 110px;
+    padding: 10px;
+  }
+  .tarteb .tarteb-col.second img.profile {
+    width: 100px;
+    height: 100px;
+  }
+  .tarteb .tarteb-col.first img.profile, .tarteb .tarteb-col.third img.profile {
+    width: 80px;
+    height: 80px;
+  }
+  .tarteb-box .tarteb-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .tarteb-box .tarteb-list h4 {
+    font-size: 16px;
+  }
+  .tarteb-box .tarteb-list h3 {
+    font-size: 14px;
+  }
+  .tarteb-box .tarteb-list h2 {
+    font-size: 20px;
+  }
+  .tarteb-box .tarteb-list img {
+    width: 50px;
+    height: 50px;
+  }
+  .tarteb-box {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .tarteb .tarteb-col.second .tarteb-degree h5 {
+    font-size: 55px;
+  }
+  .tarteb .tarteb-col.second .tarteb-degree p {
+    font-size: 30px;
+  }
+  .tarteb .tarteb-col.first .tarteb-degree h5 {
+    font-size: 50px;
+  }
+  .tarteb .tarteb-col.first .tarteb-degree p {
+    font-size: 28px;
+  }
+  .tarteb .tarteb-col.third .tarteb-degree h5 {
+    font-size: 50px;
+  }
+  .tarteb .tarteb-col.third .tarteb-degree p {
+    font-size: 28px;
+  }
+  .rate h2 {
+    width: 180px;
+    height: 180px;
+  }
+  .rate .rate-content {
+    padding: 10px 20px 20px 20px;
+  }
+  .rate .rate-box .numbers-box {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
