--- a/css/style.scss
+++ b/css/style.scss
@@ -1421,6 +1421,295 @@ input[type=number] {
 }
 
 
+.tarteb {
+    padding: 40px 0;
+    padding-bottom: 0;
+    justify-content: center;
+    align-items: flex-end;
+    display: flex;
+    .tarteb-col.first {
+        text-align: center;
+        img.profile {
+            width: 110px;
+            height: 110px;
+            border-radius: 50%;
+            border: 5px solid $secColor;
+            margin-bottom: 20px;
+        }
+        h4 {
+            font-size: 18px;
+            color: #777;
+        }
+        .tarteb-degree {
+            background: #924ECC;
+            margin-top: 20px;
+            padding: 20px;
+            color: #fff;
+            height: 190px;
+            display: flex;
+            border-radius: 0 15px 0 0;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 180px;
+            h5 {
+                font-size: 70px;
+                font-weight: 700;
+                padding-bottom: 15px;
+                margin-bottom: 20px;
+                border-bottom: 1px solid rgb(255, 255, 255);
+            }
+            p {
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+
+    .tarteb-col.second {
+        text-align: center;
+        img.profile {
+            width: 130px;
+            height: 130px;
+            border-radius: 50%;
+            border: 5px solid $thirdColor;
+            margin-bottom: 20px;
+        }
+        h4 {
+            font-size: 18px;
+        }
+        .tarteb-degree {
+            background: $secColor;
+            margin-top: 20px;
+            padding: 20px;
+            color: #fff;
+            height: 320px;
+            display: flex;
+            border-radius: 15px 15px 0 0;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 200px;
+            h5 {
+                font-size: 80px;
+                font-weight: 700;
+                padding-bottom: 15px;
+                margin-bottom: 20px;
+                border-bottom: 1px solid rgb(255, 255, 255);
+            }
+            p {
+                font-size: 40px;
+                font-weight: 700;
+                color: $thirdColor;
+            }
+        }
+    }
+
+    .tarteb-col.third {
+        text-align: center;
+        img.profile {
+            width: 110px;
+            height: 110px;
+            border-radius: 50%;
+            border: 5px solid $secColor;
+            margin-bottom: 20px;
+        }
+        h4 {
+            font-size: 18px;
+            color: #777;
+
+        }
+        .tarteb-degree {
+            background: #6729B3;
+            margin-top: 20px;
+            padding: 20px;
+            color: #fff;
+            height: 250px;
+            display: flex;
+            border-radius: 15px 0 0 0;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 180px;
+            h5 {
+                font-size: 70px;
+                font-weight: 700;
+                padding-bottom: 15px;
+                margin-bottom: 20px;
+                border-bottom: 1px solid rgb(255, 255, 255);
+            }
+            p {
+                font-size: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+
+  
+}
+.tarteb-box {
+    background: #F7F6FD;
+    padding: 40px;
+    border-radius: 20px;
+    .tarteb-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        background: #fff;
+        border: 2px solid #ccc;
+        gap: 20px;
+        border-radius: 20px;
+        margin-bottom: 15px;
+        margin-top: 15px;
+
+        h4 {
+            font-size: 28px;
+            font-weight: 700;
+            color: $thirdColor;
+            margin: 0;
+        }
+        img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+
+        }
+        h3 {
+            margin: 0;
+            color: #000;
+            font-size: 22px;
+        }
+        h2 {
+            margin: 0;
+            color: $secColor;
+            font-weight: 700;
+            font-size: 36px;
+        }
+    }
+}
+
+// end tarteb
+
+
+// start tahlel adaa 
+.rate {
+    .rate-content {
+
+        padding: 10px 40px 40px 40px;
+        margin-top: 160px;
+        border-radius: 20px;
+        background: #F7F6FD;
+        margin-bottom: 40px;
+    }
+
+
+    h2 {
+        width: 250px;
+        height: 250px;
+        border: 14px solid $thirdColor;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        align-items: center;
+        background: #8c45e0;
+        color: #fff;
+        border-radius: 50%;
+        font-size: 70px;
+        font-weight: 700;
+        margin-top: -125px;
+
+    }
+    h3 {
+        color: $secColor;
+        font-size: 28px;
+        font-weight: 700;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .rate-box {
+        padding: 20px;
+        border: 2px solid #ccc;
+        background: #fff;
+        border-radius: 20px;
+        margin-top: 30px;
+        margin-bottom: 0px;
+        .numbers-box {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+
+            h4 {
+                font-weight: 700;
+                font-size: 30px;
+            }
+            h4.main {
+                color: $thirdColor;
+            }
+            h4.sec {
+                color: $secColor;
+            }
+            h4.green {
+                color: #3ACB10;
+            }
+            h4.red {
+                color: #f00;
+            }
+
+            span {
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background: $secColor;
+                
+            }
+        }
+
+
+    }
+    h4.title {
+        font-size: 32px;
+        color: $secColor;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+    .mwad {
+        padding: 10px 0 40px 0;
+        .mwad-box {
+            margin-top: 25px;
+            margin-bottom: 25px;
+            text-align: center;
+            h4 {
+                width: 110px;
+                height: 110px;
+                line-height: 100px;
+                text-align: center;
+                border: 5px solid $thirdColor;
+                margin-left: auto;
+                margin-right: auto;
+                background: #8c45e0;
+                color: #fff;
+                border-radius: 50%;
+                font-size: 30px;
+                font-weight: 700;
+            }
+            p {
+                margin-top: 10px;
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+
 /* Responsive */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -1702,6 +1991,81 @@ input[type=number] {
         width: 40px;
         height: 40px;
       
+    }
+    .tarteb .tarteb-col.first .tarteb-degree {
+        width: 110px;
+        padding: 10px;
+    }
+    .tarteb .tarteb-col.second .tarteb-degree {
+        width: 120px;
+        padding: 10px;
+
+    }
+    .tarteb .tarteb-col.third .tarteb-degree {
+        width: 110px;
+        padding: 10px;
+
+    }
+
+    .tarteb .tarteb-col.second img.profile {
+        width: 100px;
+        height: 100px;
+    }
+    .tarteb .tarteb-col.first img.profile, .tarteb .tarteb-col.third img.profile {
+        width: 80px;
+        height: 80px;
+    }
+    .tarteb-box .tarteb-list {
+        flex-wrap: wrap;
+        gap: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .tarteb-box .tarteb-list h4 {
+        font-size: 16px;
+    }
+    .tarteb-box .tarteb-list h3 {
+        font-size: 14px;
+    }
+    .tarteb-box .tarteb-list h2 {
+        font-size: 20px;
+    }
+    .tarteb-box .tarteb-list img {
+        width: 50px;
+        height: 50px;
+    }
+    .tarteb-box {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .tarteb .tarteb-col.second .tarteb-degree h5 {
+        font-size: 55px;
+    }
+    .tarteb .tarteb-col.second .tarteb-degree p {
+        font-size: 30px;
+    }
+    .tarteb .tarteb-col.first .tarteb-degree h5 {
+        font-size: 50px;
+    }
+    .tarteb .tarteb-col.first .tarteb-degree p {
+        font-size: 28px;
+    }
+    .tarteb .tarteb-col.third .tarteb-degree h5 {
+        font-size: 50px;
+    }
+    .tarteb .tarteb-col.third .tarteb-degree p {
+        font-size: 28px;
+    }
+    .rate h2 {
+        width: 180px;
+        height: 180px;
+    }
+    .rate .rate-content {
+        padding: 10px 20px 20px 20px;
+    }
+    .rate .rate-box .numbers-box {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
 
