--- a/css/style.css
+++ b/css/style.css
@@ -1468,6 +1468,14 @@ input[type=number] {
   font-size: 18px;
 }
 
+.not-found {
+  min-height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
+
 /* Responsive */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
