--- a/css/style.scss
+++ b/css/style.scss
@@ -1695,6 +1695,14 @@ input[type="number"] {
   }
 }
 
+.not-found {
+  min-height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
+
 /* Responsive */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
