--- a/css/style.scss
+++ b/css/style.scss
@@ -169,55 +169,59 @@ nav {
 
 // start slider
 .slider {
-  .carousel-item .right {
-    border-radius: 35px;
-    // border: 8px solid $secColor;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  .carousel-item img {
+    height: 410px;
+    object-fit: cover;
+}
+  // .carousel-item {
+  //   border-radius: 35px;
+  //   // border: 8px solid $secColor;
+  //   background-position: center;
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
 
-    .caption-box {
-      display: flex;
-      padding-left: 50px;
-      padding-right: 50px;
-      height: 100%;
-      justify-content: center;
-      flex-direction: column;
+  //   .caption-box {
+  //     display: flex;
+  //     padding-left: 50px;
+  //     padding-right: 50px;
+  //     height: 100%;
+  //     justify-content: center;
+  //     flex-direction: column;
 
-      h3 {
-        color: $mainColor;
-        font-size: 28px;
-        font-weight: 700;
-      }
+  //     h3 {
+  //       color: $mainColor;
+  //       font-size: 28px;
+  //       font-weight: 700;
+  //     }
 
-      p {
-        color: #000;
-        font-size: 16px;
-        line-height: 1.8;
-        margin-top: 10px;
-      }
+  //     p {
+  //       color: #000;
+  //       font-size: 16px;
+  //       line-height: 1.8;
+  //       margin-top: 10px;
+  //     }
 
-      button {
-        background: #8d2eff;
-        border-radius: 25px;
-        color: #fff;
-        border: 4px solid $thirdColor;
-        width: 200px;
-        padding: 9px;
-        @extend .transition;
+  //     button {
+  //       background: #8d2eff;
+  //       border-radius: 25px;
+  //       color: #fff;
+  //       border: 4px solid $thirdColor;
+  //       width: 200px;
+  //       padding: 9px;
+  //       @extend .transition;
 
-        &:hover {
-          background: transparent;
-          color: #8d2eff;
-        }
-      }
-    }
+  //       &:hover {
+  //         background: transparent;
+  //         color: #8d2eff;
+  //       }
+  //     }
+  //   }
 
-    img.left-img {
-      height: 415px;
-      float: left;
-    }
-  }
+  //   img.left-img {
+  //     height: 415px;
+  //     float: left;
+  //   }
+  // }
   .score {
     width: 250px;
     height: 250px;
@@ -384,11 +388,18 @@ nav {
     margin-bottom: 50px;
   }
 
-  img {
+  img.img-fluid {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
     display: block;
+  }
+  img.person-img {
+    width: 65px;
+    height: 65px;
+    border: 50%;
+    object-fit: contain;
+    margin-inline-end: 1rem;
   }
 
   .testi-box {
@@ -410,9 +421,10 @@ nav {
 
       span {
         font-size: 18px;
-        color: #000;
-        margin-inline-start: 40px;
+        color: #8a8989;
+        margin-inline-start: 0px;
         font-weight: 400;
+        display: block;
       }
     }
 
@@ -1793,7 +1805,7 @@ input[type="number"] {
     margin-inline-start: 20px;
   }
 
-  .testimonials img {
+  .testimonials img.img-fluid {
     margin-top: 20px;
     margin-bottom: 20px;
   }
@@ -2053,6 +2065,10 @@ input[type="number"] {
     margin-top: 10px;
     margin-bottom: 10px;
   }
+  .slider .carousel-item img {
+    height: 180px;
+    object-fit: unset;
+}
 }
 
 /* galaxy S5 */
